--- a/index.html
+++ b/index.html
@@ -5,22 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Krub:ital,wght@0,700;1,400&display=swap" rel="stylesheet">
-    <link rel="preload" href="css/styles.css" as="style">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/normalize.css" />
+    <link rel="preload" href="css/normalize.css" as="style" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Krub:ital,wght@0,700;1,400&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preload" href="css/styles.css" as="style" />
+    <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-      <header>
-        <h1 class="title">Gonzalo Durán Tonores <span>Freelancer</span> </h1>
+    <header>
+      <h1 class="title">Gonzalo Durán Tonores <span>Freelancer</span></h1>
     </header>
-
-    <nav>
-      <a href="#">Inicio</a>
-      <a href="#">Sobre mi</a>
-      <a href="#">Contactos</a>
-    </nav>
+    <div class="nav-bg">
+      <nav class="navegador-principal contenedor">
+        <a href="#">Inicio</a>
+        <a href="#">Sobre mi</a>
+        <a href="#">Contactos</a>
+      </nav>
+    </div>
     <section>
       <h2>Ingeniero Electrónico y Sistemas</h2>
       <svg
